fix: enhance contrast for accordion body on dark backgrounds

--- a/backend/static/scss/_features.scss
+++ b/backend/static/scss/_features.scss
@@ -81,5 +81,9 @@
         background-color: #fff;
       }
     }
+
+    .accordion-body {
+      color: #fff;
+    }
   }
 }
